# mofid

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  .travis.yml  Dockerfile  Gemfile  Makefile  README.md  _config.yml  code_overview.md  compiling.md  containers.md  docker.md  mofid-vscode.code-workspace  mofid.def  set_paths.py  setup.py  singularity.md
.github/workflows/: main.yml
Analysis/: .gitignore  README.md  README.txt  extract_carbon_mofs.py  find_duplicates.sh  find_polymorphs.sh  plot_round_trip_errors.R  plot_venn_diagram.R
Analysis/R-Utilities/: parse_json_results.R  read_named_tables.R
Python/: check_mof_composition.py  check_mof_linkers.py  cheminformatics.py  convert_smi_to_tables.py  cpp_cheminformatics.py  extract_metals.py  extract_moffles.py  id_constructor.py  list_to_moffles.py  mofid_json.py  names_to_tables.py  old_cheminformatics.py  paths.py  remove_metals.py  rerun_systre.py  run_mofid.py  smiles_diff.py
Python/mofid/: sbu.py
R/: check_nist_core_overlap.R  parse_json_results.R
Resources/: RCSRnets.arc  ga_hmof_info.json  hmof_linker_info.json  known_mof_info.json  materials_studio_bonding.docx  tobacco_info.json
Resources/KnownCIFs/: 01_MIL-88.cif  07_MOF-802.cif  16_UiO-66.cif  29_DUT_42_metal_swap.cif  80_PCN-250.cif
Resources/KnownCIFs/Outputs/01_MIL-88/: mol_name.txt  orig_mol.cif
Resources/KnownCIFs/Outputs/07_MOF-802/: mol_name.txt  orig_mol.cif
Resources/KnownCIFs/Outputs/16_UiO-66/: mol_name.txt  orig_mol.cif
Resources/TestCIFs/: ABAVIJ_clean.cif  ADARAA_clean.cif  COD_2100028.cif  MIL-47-P1-RASPA.cif  NU-1000_S1.cif  P1-Cu-BTC.cif  P1-IRMOF-1.cif  VUSKEA_clean.cif  Zn4O_cluster_with_hydrogen.cif  hypotheticalMOF_1003830_0_0_4_10_10_0.cif  hypotheticalMOF_15286_i_0_j_17_k_17_m_0.cif  hypotheticalMOF_1_i_0_j_0_k_0_m_0_cat_1.cif  hypotheticalMOF_2000756_0_0_2_32_32_0.cif  hypotheticalMOF_22242_0_0_1_0_9_0.cif  hypotheticalMOF_27262_1_0_2_9_9_0.cif  hypotheticalMOF_5026325_3_0_0_27_27_0.cif  hypotheticalMOF_5071180_i_2_j_25_k_1_m_0.cif  hypotheticalMOF_7002752_0_0_4_28_28_0.cif  ic101935f_si_002_tobacco.cif  intentionally_messed_up_hmof1.cif  ja_512311a_si_007_tobacco.cif  nbob_sym_5_mc_2_sym_5_on_13_L_16.cif  super_csq_sym_5_mc_2_sym_8_mc_9_L_12.cif  super_hMOF_22242.cif  super_nu1000.cif
Scripts/: combine_smi_tables.sh  extract_folder.sh  filter_errors.sh  import_emscripten.sh  make_download_jq.sh  run_folder.sh  run_systre.sh  setup_web_compiler_paths.sh  submit.job
Scripts/HPC/: child_mofid.job  child_mofid_moab.job  child_mofid_slurm.job  run_post_submit.sh  run_submit_all.sh  submit_one.sh  submit_parallel.sh
Scripts/HPC/moab/: child_mofid_moab.job  child_validation.job  submit_one.sh  submit_parallel.sh
Scripts/HPC/slurm/: child_mofid_slurm.job  child_validation.job  submit_one.sh  submit_parallel.sh
_sass/custom/: custom.scss
_site/: 404.html  feed.xml  index.html
_site/assets/css/: just-the-docs-dark.css  just-the-docs-default.css  just-the-docs-head-nav.css
_site/assets/js/: just-the-docs.js  search-data.json
_site/classes/: index.html
_site/compiling/: index.html
_site/docker/: index.html
_site/docs/: index.html
_site/docs/classes/: connectiontable.html  deconstructor.html  mappedmol.html  metaloxodeconstructor.html  pseudoatommap.html  standardisolateddeconstructor.html  topology.html  virtualmol.html
_site/singularity/: index.html
docs/: about.md  compiling.md  docker.md  singularity.md
docs/classes/: classes.md  connectiontable.md  deconstructor.md  mappedmol.md  metaloxodeconstructor.md  pseudoatommap.md  standardisolateddeconstructor.md  topology.md  virtualmol.md
eigen/debug/gdb/: printers.py
mofid-v2/: README.md
mofid-v2/analysis_of_nodes_and_linkers/: README.md  convert_smiles_to_xyz.py  group_node_by_composition.py  group_node_by_structure.py  split_linkers_to_xyz.py  split_nodes_to_xyz.py
mofid-v2/convert_mofidv1_to_mofidv2/: ASR_mofid-v1.txt  FSR_mofid-v2.txt  README.md  ion_mofid-v1.txt  ion_mofid-v2.txt
mofid-v2/detect_erroneous_MOFids/: README.md  Type_2_Structures.csv  analyze_solvent_containing_mofs.py  dataset-ASR_mofid.csv  erroneous_structure_list.py
mofid_v2/analysis_of_nodes_and_linkers/: .group_linkers_by_SMILES.py.swp  all_mofid-v1.txt  group_linkers_by_SMILES.py  group_node_by_structure_library.py  smiles_by_ref.json
mofid_v2/convert_mofidv1_to_mofidv2/: ASR_mofid-v2.txt  FSR_mofid-v1.txt  MOFid-v5_node.csv  convert_mofidv1_to_mofidv2.ipynb
mofid_v2/detect_erroneous_MOFids/: Type_1_Structures.csv  dataset-FSR_mofid.csv  dataset-ion_mofid.csv
openbabel/: CMakeLists.txt  openbabel-mod.project
openbabel/data/: element.txt  element_organic_nodelete.txt  element_oxygen_bridges.txt
openbabel/include/openbabel/: bond.h  crystal.h  generic.h  mol.h  obutil.h  plugin.h  tautomer.h
openbabel/scripts/csharp/: openbabel-csharp.cpp
openbabel/scripts/java/: openbabel-java.cpp
openbabel/scripts/perl/: OpenBabel.pm
openbabel/src/: CMakeLists.txt  atom.cpp  bond.cpp  crystal.cpp  generic.cpp  mol.cpp  plugin.cpp
openbabel/src/formats/: CMakeLists.txt  cifformat.cpp  formats.cmake  mmcifformat.cpp  systreformat.cpp
openbabel/src/math/: align.cpp
openbabel/src/ops/: addpolarh.cpp  energy.cpp
openbabel/src/stereo/: perception.cpp
openbabel/test/: testobconv_writers.py  testsmartssym.py
src/: CMakeLists.txt  compare.cpp  compare.h  config_sbu.h.cmake  deconstructor.cpp  deconstructor.h  example.cpp  framework.cpp  framework.h  invector.h  obdetails.cpp  obdetails.h  periodic.cpp  periodic.h  pre_emscripten.js  pseudo_atom.cpp  pseudo_atom.h  sbu.cpp  searchdb.cpp  sobgrep.cpp  topology.cpp  topology.h  tsfm_smiles.cpp  virtual_mol.cpp  virtual_mol.h
src/Web/: .gitignore  README.md  index.md  mofid.css  sbu.html  searchdb.html
src/Web/gavrog_override/: main.js  webpack.config.js
src/Web/web_data/: core.smi
src/ob_datadir/: core.smi  element.txt
src/test/: CMakeLists.txt  alltests.cpp  example.cpp  invectortest.cpp  obdetailstest.cpp
tests/: check_file.py  check_intermediate.sh  check_mof_composition.py  check_run_mofid.py
(+163 files in other folders)
